--- a/ex026/mq003/index.html
+++ b/ex026/mq003/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css" media="all">
+
+    <link rel="stylesheet" href="styles/media-queries.css" media="screen">
+
     <title>Media Query</title>
 </head>
 <body>
     
+    <main>
+        <h1>Mobile Fisrt e teste de Queries</h1>
+        <img src="imagens/icon-phone.png" alt="Acesso via smartphone" title="Acesso via smartphone" id="phone">
+        <img src="imagens/icon-tablet.png" alt="Acesso via tablet" title="Acesso via tablet" id="tablet">
+        <img src="imagens/icon-print.png" alt="Impressão" title="Impressão" id="print">
+        <img src="imagens/icon-pc.png" alt="Acesso via desktop" title="Acesso via desktop" id="desk">
+        <img src="imagens/icon-tv.png" alt="Acesso via Tv" title="Acesso via Tv" id="tv">
+
+    </main>
+
 </body>
 </html>
