--- a/ex026/mq003/index.html
+++ b/ex026/mq003/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <link rel="stylesheet" media="print" href="styles/print.css">
+     
     <link rel="stylesheet" href="styles/style.css" media="all">
 
     <link rel="stylesheet" href="styles/media-queries.css" media="screen">
+
+   
+
+   
 
     <title>Media Query</title>
 </head>
