--- a/ex026/mq004/index.html
+++ b/ex026/mq004/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/media-query.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <title>Menu Responsivo Query</title>
 </head>
 
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Site Query</h1>
         <span id="burger" class="material-icons"  onclick="clickMenu()">menu</span>
@@ -57,6 +58,13 @@
             else {
                 idesk.style.display = 'block'
             }
+        }
+
+        function mudouTamanho() {
+           if (window.innerWidth >= 768) {
+           itens.style.display = 'block'
+        }
+        else {itens.style.display = 'none'}
         }
 
     </script>
